--- a/Main_Python.ipynb
+++ b/Main_Python.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "04299de8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "from config import user\n",
-    "from config import password2\n"
+    "from config import password2\n",
+    "from urllib import parse"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "62fa151e",
    "metadata": {},
    "outputs": [],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "9b43e7ff",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "241e2c5a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "3386b747",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "5d07ce2c",
    "metadata": {},
    "outputs": [],
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "ab12d98f",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "65c17c5c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "f8f922f7",
    "metadata": {},
    "outputs": [],
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "3781e385",
    "metadata": {},
    "outputs": [],
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "3c516685",
    "metadata": {},
    "outputs": [],
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "933be4a7",
    "metadata": {},
    "outputs": [],
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "258d06b6",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "2e9fccb9",
    "metadata": {},
    "outputs": [
@@ -424,7 +425,7 @@
        "[156 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "8f9eafa7",
    "metadata": {},
    "outputs": [],
    "source": [
     "protocol=\"postgresql\"\n",
     "username=user\n",
-    "password=password2\n",
+    "password=parse.quote(password2)\n",
     "host=\"localhost\"\n",
     "port=5432\n",
     "database_name=\"World_Happiness\"\n",
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "87305390",
    "metadata": {},
    "outputs": [
@@ -475,17 +476,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kazek\\AppData\\Local\\Temp\\ipykernel_24088\\3440626619.py:2: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "C:\\Users\\badri\\AppData\\Local\\Temp\\ipykernel_31072\\3440626619.py:2: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  engine.table_names()\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['year_2020', 'year_2022', 'year_2021', 'year_2019', 'coordinates']"
+       "['year_2022', 'year_2021', 'year_2020', 'year_2019', 'coordinates']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "8d6300ff",
    "metadata": {},
    "outputs": [
@@ -507,7 +508,7 @@
        "146"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "f1660413",
    "metadata": {},
    "outputs": [
@@ -528,7 +529,7 @@
        "149"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "2faf40c3",
    "metadata": {},
    "outputs": [
@@ -549,7 +550,7 @@
        "153"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "5e6ef262",
    "metadata": {},
    "outputs": [
@@ -570,7 +571,7 @@
        "156"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "ad5ee581",
    "metadata": {},
    "outputs": [
@@ -591,7 +592,7 @@
        "244"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,6 +605,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5fc32850",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "551f8638",
    "metadata": {},
    "outputs": [],
    "source": []
